2002-10-28  Chris Lyttle  <chris@wilddev.net>

	* NEWS: update for new release
	* configure.in: update to new version 1.7.2

2002-10-28  Chris Lyttle  <chris@wilddev.net>

	* src/scm/help-topics-index.old: Moved old file to here for now
	* src/scm/help-topics-index.scm: deleted the junk and put temp in
	* doc/sgml/C/topic.dat: add help topic
	* doc/sgml/C/Makefile.am: delete bunch of crud, add new crud yippie
	* doc/sgml/Makefile.am: remove translations of docs
	* doc/Makefile.am: remove html dir
	* doc/sgml/C/guide.sgml: temp placeholder for new help
	* doc/sgml/C/help.sgml: temp placeholder for new help
	* configure.in: remove translated doc dirs from makefiles

2002-10-28  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-html.c: 
	* src/gnome/Makefile.am: 
	* src/gnome/top-level.c (gnc_gui_init): Disable the gnucash
	network code.

	* src/app-utils/prefs.scm: Add option for enabling advanced
	pages. Move some existing prefs to an "Advanced" page.  Disable
	the gnucash network code.

	* src/gnome-utils/dialog-options.c: OK button should always be
	sensitive.  Add support for "Advanced" option pages. These option
	pages begin with the characters "_+".

2002-10-27  Derek Atkins  <derek@ihtfp.com>
	* gncInvoice.[ch]: create gncInvoiceGetTotal(), which currently does
	  nothing but will eventually return the actual invoice total.
	* dialog-invoice.c: add a summary bar with the invoice total
	* invoice.glade: add a summary bar dock at the bottom of the page.
	Partial fix for bug #96833

	* gncInvoice.c -- implement GetTotal() -- fixes #96833

	* invoice.glade -- add "View->SummaryBar" item to turn it off.
	
2002-10-27  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/*.c: add #include config.h for correct
	i18n.

	* src/app-utils/prefs.scm, src/import-export/hbci/hbci.scm: Move
	preference creation into hbci module. Renamed that preference tab
	into "Online Banking & Importing".
